--- a/IceCreamMenu.css
+++ b/IceCreamMenu.css
@@ -3,27 +3,15 @@
     Assignment topic : TakeAway
 */
 
-.navbar {
-    margin-bottom: 0;
-    background-color: #f4511e;
-    z-index: 9999;
+.navbar
+{
+    background-color: pink;
+    margin-bottom: 0; 
     border: 0;
-    font-size: 12px !important;
-    line-height: 1.42857143 !important;
-    letter-spacing: 4px;
-    border-radius: 0;
+
 }
 
-.navbar li a, .navbar .navbar-brand {
-    color: #fff !important;
-}
-
-.navbar-nav li a:hover, .navbar-nav li.active a {
-    color: #f4511e !important;
+.navbar-nav li a:hover, .navbar-nav li.active a
+{
     background-color: #fff !important;
-}
-
-.navbar-default .navbar-toggle {
-    border-color: transparent;
-    color: #fff !important;
 }
