--- a/IceCreamMenu.css
+++ b/IceCreamMenu.css
@@ -3,15 +3,37 @@
     Assignment topic : TakeAway
 */
 
+body
+{
+    font-family: "Courier New";
+}
+
 .navbar
 {
+    /*set the background colour pink*/
     background-color: pink;
     margin-bottom: 0; 
     border: 0;
+    font-size: 14px !important;
+    letter-spacing: 4px;
 
 }
+.navbar li a, .navbar .navbar-brand
+{
+    /*change colour of the text*/
+    color: #fff !important;
+}
+
 
 .navbar-nav li a:hover, .navbar-nav li.active a
 {
+    /*hovering = letters change to pink*/
+    color: pink !important;
+    /*when hovering over  background turns white*/
     background-color: #fff !important;
+}
+
+.jumbotron
+{
+    background-color: lavenderblush !important;
 }
