--- a/IceCreamMenu.css
+++ b/IceCreamMenu.css
@@ -1,6 +1,6 @@
 /*
     author : Buchita Gitchamnan
-    Assignment topic : TakeAway
+    Assignment topic : IceCream
 */
 
 body
@@ -57,3 +57,7 @@ mark
 
 
 
+.nounder
+{
+    text-decoration: none !important;
+}
